--- a/hotsprings/style.css
+++ b/hotsprings/style.css
@@ -82,7 +82,7 @@ section{
     background-color:blue;
     display: none;
 }
-.faq h1:hover ~ p {
+.faq h2:hover ~ p {
     display: block;
 }
 
@@ -100,6 +100,7 @@ section{
   margin-left: auto;
   margin-right: auto;
   width: 4%;
+  padding-top:100px;
 }
 
 .icons { 
